2007-09-15	kaffeetisch

	* t/01.GtkWindow.t
	* t/Gdk.t
	* t/GdkColor.t
	* t/GdkDisplay.t
	* t/GdkEvent.t
	* t/GdkKeys.t
	* t/GdkPango.t
	* t/GdkPixbuf.t
	* t/GdkWindow.t
	* t/GdkX11.t
	* t/GtkAboutDialog.t
	* t/GtkAction.t
	* t/GtkCellLayout.t
	* t/GtkEntry.t
	* t/GtkEntryCompletion.t
	* t/GtkIconTheme.t
	* t/GtkIconView.t
	* t/GtkMenuItem.t
	* t/GtkMenuToolButton.t
	* t/GtkPageSetup.t
	* t/GtkPaperSize.t
	* t/GtkPrintSettings.t
	* t/GtkRange.t
	* t/GtkStatusIcon.t
	* t/GtkTextBuffer.t
	* t/GtkTextMark.t
	* t/GtkToolItem.t
	* t/GtkTreeView.t
	* t/GtkWidget.t
	* t/PangoCairo.t
	* t/PangoFont.t
	* t/PangoLayout.t
	* xs/Gdk.xs
	* xs/GdkDisplay.xs
	* xs/GdkEvent.xs
	* xs/GdkKeys.xs
	* xs/GdkPango.xs
	* xs/GdkWindow.xs
	* xs/GdkX11.xs
	* xs/GtkAboutDialog.xs
	* xs/GtkAction.xs
	* xs/GtkCellLayout.xs
	* xs/GtkEntry.xs
	* xs/GtkEntryCompletion.xs
	* xs/GtkIconTheme.xs
	* xs/GtkMenuToolButton.xs
	* xs/GtkPageSetup.xs
	* xs/GtkPaperSize.xs
	* xs/GtkPrintSettings.xs
	* xs/GtkRange.xs
	* xs/GtkStatusIcon.xs
	* xs/GtkTextBuffer.xs
	* xs/GtkTextMark.xs
	* xs/GtkToolItem.xs
	* xs/GtkTreeView.xs
	* xs/GtkTreeViewColumn.xs
	* xs/GtkWidget.xs
	* xs/GtkWindow.xs
	* xs/PangoCairo.xs
	* xs/PangoFont.xs
	* xs/PangoLayout.xs: Change version checks to refer to gtk+ 2.12
	instead of 2.11.  Thanks, perl -pi.

2007-09-09	kaffeetisch

	* t/GtkStatusIcon.t
	* xs/GtkStatusIcon.xs: Make the x, y arguments to
	Gtk2::StatusIcon::position_menu optional.  Patch by muppet.

	* t/GdkWindow.t: Fix a reported test failure in the
	get_decorations() checks.

2007-08-13	kaffeetisch

	* xs/GdkEvent.xs
	* xs/GdkPixbuf.xs
	* xs/GtkTreeModel.xs: Alter some type names in the POD so that
	Glib::GenPod recognizes them.

2007-08-01	kaffeetisch

	* Gtk2.pm
	* NEWS
	* README: Unstable release 1.155.

2007-08-01	kaffeetisch

	* MANIFEST: Add forgotten maps_pango-1.18.  Its absence caused
	compilation errors.  (Reported by Thierry Vignaud)

	* t/Gdk.t: Fix incorrect skip count.
